[package]
name = "extrasafe"
version = "0.2.0"
edition = "2021"
authors = ["Harry Stern <harry@harrystern.net>",]
description = "Make your code extrasafe by preventing it from calling unneeded syscalls."
repository = "https://github.com/boustrophedon/extrasafe"
license = "MIT"
keywords = ["security", "seccomp", "syscall"]
categories = ["os::linux-apis"]

[dependencies]
libseccomp = "^0.3"
libc = "^0.2"
syscalls = { version = "^0.6", default-features = false }

[dev-dependencies]
bytes = "^1"
crossbeam = "^0.8"
crossbeam-queue = "^0.3"
crossbeam-channel = "^0.5"
tempfile = "^3"
tokio = "^1.15"
hyper = { version = "^0.14", features = ["http1", "server", "runtime", "tcp"] }
warp = "^0.3"
reqwest = "^0.11"
rusqlite = "^0.26"
