[package]
name = "extrasafe"
version = "0.3.0"
edition = "2021"
authors = ["Harry Stern <harry@harrystern.net>",]
description = "Make your code extrasafe by preventing it from calling unneeded syscalls."
repository = "https://github.com/boustrophedon/extrasafe"
license = "MIT"
keywords = ["security", "seccomp", "syscall"]
categories = ["os::linux-apis"]

[dependencies]
seccompiler = { version = "^0.4", default-features = false }
libc = "^0.2"
syscalls = { version = "^0.6", default-features = false }

[dev-dependencies]
bytes = "^1"
crossbeam = "^0.8"
crossbeam-queue = "^0.3"
crossbeam-channel = "^0.5"
tempfile = "^3"
tokio = "^1.15"
hyper = { version = "^0.14", features = ["http1", "server", "runtime", "tcp"] }
warp = "^0.3"
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls"] }
rusqlite = "^0.26"
