[package]
name = "extrasafe"
version = "0.5.1"
edition = "2021"
authors = ["Harry Stern <harry@harrystern.net>",]
description = "Make your code extrasafe by reducing what it can access."
repository = "https://github.com/boustrophedon/extrasafe"
license = "MIT"
keywords = ["security", "seccomp", "landlock", "syscall"]
categories = ["os::linux-apis"]

[package.metadata.docs.rs]
all-features = true

[features]
landlock = ["dep:landlock"]
isolate = []

[dependencies]
seccompiler = { version = "^0.4", default-features = false }
libc = "^0.2"
syscalls = { version = "^0.6", default-features = false }
landlock = { version ="^0.3", optional = true }

[dev-dependencies]
bytes = "^1"
crossbeam = "^0.8"
crossbeam-queue = "^0.3"
crossbeam-channel = "^0.5"
tempfile = "^3"
tokio = "^1.15"
hyper = { version = "^0.14", features = ["http1", "server", "runtime", "tcp"] }
warp = "^0.3"
rusqlite = "^0.26"

[target.'cfg(target_env = "musl")'.dev-dependencies]
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls"] }

[target.'cfg(all(not(target_env = "musl"), target_arch = "aarch64"))'.dev-dependencies]
reqwest = { version = "^0.11", features = ["native-tls-vendored"] }

[target.'cfg(not(any(target_env = "musl", target_arch = "aarch64")))'.dev-dependencies]
reqwest = { version = "^0.11" }
